[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/ui/ceres.gd" type="Script" id=1]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=2]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=3]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Ceres" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -360.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "BUTTON_TESTROOMS"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 111.0
margin_top = 173.0
margin_right = 1128.0
margin_bottom = 651.0

[node name="L20" type="Button" parent="VBoxContainer"]
margin_right = 1017.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "CERES_L20_DESC"

[node name="Lilytest" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 1017.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "MENU_MAP"

[node name="Dialogtest" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 1017.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Honker Railway"

[node name="Bullethell" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 1017.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "TWIN_TROUBLEMAKERS"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 1017.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
text = "TWIN_TROUBLEMAKERS_P2"

[node name="WIP" type="Button" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1017.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
text = "YOUR_HOME"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1017.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="VBoxContainer/L20" to="." method="_on_l_20_pressed"]
[connection signal="pressed" from="VBoxContainer/Lilytest" to="." method="_on_lilytest_pressed"]
[connection signal="pressed" from="VBoxContainer/Dialogtest" to="." method="_on_dialogtest_pressed"]
[connection signal="pressed" from="VBoxContainer/Bullethell" to="." method="_on_bullethell_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/WIP" to="." method="_on_WIP_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
